--- a/_i18n/cs.yml
+++ b/_i18n/cs.yml
@@ -192,7 +192,7 @@ page-home:
     text: Řekněte nám, s čím potřebujete pomoct nebo poradit. Spolu najdeme řešení.
   copyright:
     address: Advantage Solutions, s. r. o., Jihovýchodní II. 887, 141 00 Praha 4, Czech Republic.
-    date: Copyright © 2003–2023.
+    date: Copyright © 2003–2024
 
 page-contact:
   title: Kontakt
