--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -214,3 +214,7 @@ work-with-us:
 what-we-do:
   title: what-we-do
   description: what-we-do
+
+not-found:
+  title: The page was not found.
+  details: Go back to the <a href="/">home page</a>.
