Updated homepage description snippet

--- a/_i18n/cs.yml
+++ b/_i18n/cs.yml
@@ -20,8 +20,8 @@ page-contact:
 
 page-home:
   title: Home
-  description: ORIGAM je open source software pro vývoj interních systémů i aplikací na míru.
-   Pro všechny, kterým nestačí běžné aplikace.
+  description: Umožňujeme klientům efektivní práci z odkudkoliv
+   pomocí informačních systémů na míru a komunikačních nástrojů.
   intro:
     title: Rozvíjíme Vaši digitální budoucnost
     subtitle: Vytváříme řešení pro týmy a podnikání
