Changed home page name

--- a/_i18n/cs.yml
+++ b/_i18n/cs.yml
@@ -19,7 +19,7 @@ page-contact:
   title: Kontakt
 
 page-home:
-  title: Home
+  title: Advantage Solutions
   description: Umožňujeme klientům efektivní práci z odkudkoliv
    pomocí informačních systémů na míru a komunikačních nástrojů.
   intro:
