Changed home page title

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -19,7 +19,7 @@ page-contact:
   title: Kontakt
 
 page-home:
-  title: Home
+  title: Rozvíjíme Váš interní systém, podpůrné aplikace a procesy
   description: Umožňujeme klientům efektivní práci z odkudkoliv
    pomocí informačních systémů na míru a komunikačních nástrojů.
   intro:
