--- a/_i18n/cs.yml
+++ b/_i18n/cs.yml
@@ -77,7 +77,7 @@ page-home:
         description: <b>Zakladatel Advantage Solutions a tvůrce ORIGAM,</b> manažer, softwarový a databázový architekt, Discourse administrátor, podnikatelský mentor, inovátor ve vzdělávání.<br><br> Jaký je? Hledá a najde vždy dobrá řešení pro klienty i kolegy. Jedná na rovinu, s jasným cílem pomoct. Zkušenosti v podnikání předává také studentům SŠ.
       - name: Petr Hrehorovský
         photo: img/pages/home/members/photo-Petr-Hrehorovsky.jpg
-        description: "<b>Provozní ředitel,</b> senior vývojář, maintainer kódu a navíc má pod palcem HR. Pracoval na projektech v oblasti realit, státní správy, aerolinek i bankovnictví.<br><br> Jaký je? Věčný kritik a pedant, dohlíží na čistotu kódu a českého jazyka. Zajímavost: Petr je v týmu už 15 let a pořád ho to s námi baví."
+        description: "<b>Senior architekt,</b> maintainer kódu a navíc má pod palcem HR. Pracoval na projektech v oblasti realit, státní správy, aerolinek i bankovnictví.<br><br> Jaký je? Věčný kritik a pedant, dohlíží na čistotu kódu a českého jazyka. Zajímavost: Petr je v týmu už 15 let a pořád ho to s námi baví."
       - name: Vašek Urbánek
         photo: img/pages/home/members/photo-Vaclav-Urbanek.jpg
         description: <b>Senior backend architekt a databázový architekt.</b> Pracoval na projektech pro aerolinky, bankovní sektor nebo ecommerce.<br><br> Jaký je? Jeho doménou je řešení náročných úkolů. Za vším vidí rizika, proto pracuje s každou variantou, aby je odstranil.
