edited team description

--- a/_i18n/cs.yml
+++ b/_i18n/cs.yml
@@ -92,7 +92,7 @@ page-home:
         description: <b>Senior backend vývojářka</b>, která toho dělá daleko víc - business proces modely, databázovou architekturu, zákaznickou podporu, analýzy. Má zkušenosti v oboru e-commerce.<br><br>Jaká je? Pečlivá, důsledná, zodpovědná, naše &#35;1 pro modelování.
       - name: Majka Gerliczyová
         photo: img/pages/home/members/photo-Maria-Gerliczyova.jpg
-        description: <b>Copywriterka</b>, marketérka a koordinátorka projektů.<br><br>Jaká je? Pokládá spoustu otázek, které pomáhají utřídit a vyjasnit si, co chcete a potřebujete pro své projekty. A pak Vám s tím pomůže.
+        description: <b>Koordinátorka projektů</b>, copywriterka a marketérka.<br><br>Jaká je? Pokládá spoustu otázek, které pomáhají utřídit a vyjasnit si, co chcete a potřebujete pro své projekty. A pak Vám s tím pomůže.
       - name: Nela Hakr
         photo: img/pages/home/members/photo-Nela-Hakr.jpg
         description: <b>Konzultantka, backend vývojářka a správkyně dokumentace</b>. Má zkušenosti s organizací vzdělávacích akcí v univerzitním prostredí, podporou implementace podnikové aplikace i s projektovým řízením.<br><br>Jaká je? Záleží jí na životním prostředí, miluje matematiku a cestování.
