Added Viktor to members

--- a/_i18n/cs.yml
+++ b/_i18n/cs.yml
@@ -99,6 +99,9 @@ page-home:
       - name: Táňa Beránková Císařová
         photo: img/pages/home/members/photo-Tatana-Berankova-Cisarova.jpg
         description: <b>Konzultantka projektového inkubátoru</b>. Je zkušená pedagožka ekonomiky, podporuje inovace ve vzdělávání a spolupráci mezi studenty a podnikateli.<br><br> Jaká je? Nadšená do práce a nových úkolů, plná energie.
+      - name: Viktor Ter
+        photo: img/pages/home/members/photo-Viktor-Ter.jpg
+        description: <b>Produktový a projektový manažer, správce dokumentace</b>.<br><br>Jaký je? S nadšením se věnuje zlepšování platformy ORIGAM. Hledá způsoby, jak usnadnit spolupráci týmu a přinést zákazníkům efektivnější a pohodlnější řešení.
       - name: David Pilpach
         photo: img/pages/home/members/photo-David-Pilpach.jpg
         description: <b>Full stack vývojář</b>.  Podílel se na vývoji administrativních systémů, zajímá se o logistiku.<br><br>Jaký je? Pracuje spolehlivě a rychle a ve volném čase profesionálne skáče.
